// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFormItem passes all props correctly to Form.Item and wrapped Input component (with error) 1`] = `
<FormItem
  className=""
  hasFeedback={true}
  help={
    <span
      data-test-id="test-error"
    >
      Error
    </span>
  }
  label={
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Test Label"
      transitionName="zoom-big-fast"
    >
      Test Label
    </Tooltip>
  }
  labelCol={
    Object {
      "md": Object {
        "span": 5,
      },
      "sm": Object {
        "span": 24,
      },
    }
  }
  validateStatus="error"
  wrapperCol={
    Object {
      "md": Object {
        "span": 19,
      },
      "sm": Object {
        "span": 24,
      },
    }
  }
>
  <TestField
    data-test-id="test"
    fieldProp1="fp1"
    form={
      Object {
        "errors": Object {
          "test": "Error",
        },
        "touched": Object {
          "test": true,
        },
      }
    }
    frieldProp2="fp2"
    name="test"
    normalProp1="np1"
    normalProp2="np2"
  />
  <span
    className="ant-form-text"
  >
    Test Suffix
  </span>
</FormItem>
`;

exports[`withFormItem passes all props correctly to Form.Item and wrapped Input component (without error) 1`] = `
<FormItem
  className=""
  hasFeedback={false}
  label={
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Test Label"
      transitionName="zoom-big-fast"
    >
      Test Label
    </Tooltip>
  }
  labelCol={
    Object {
      "md": Object {
        "span": 5,
      },
      "sm": Object {
        "span": 24,
      },
    }
  }
  validateStatus=""
  wrapperCol={
    Object {
      "md": Object {
        "span": 19,
      },
      "sm": Object {
        "span": 24,
      },
    }
  }
>
  <TestField
    data-test-id="test"
    fieldProp1="fp1"
    form={
      Object {
        "errors": Object {},
        "touched": Object {
          "test": true,
        },
      }
    }
    frieldProp2="fp2"
    name="test"
    normalProp1="np1"
    normalProp2="np2"
  />
  <span
    className="ant-form-text"
  >
    Test Suffix
  </span>
</FormItem>
`;

exports[`withFormItem passes props correctly to Form.Item and wrapped Input component (without error and custom layout) 1`] = `
<FormItem
  className=""
  hasFeedback={false}
  label={
    <Tooltip
      arrowPointAtCenter={false}
      autoAdjustOverflow={true}
      mouseEnterDelay={0.1}
      mouseLeaveDelay={0.1}
      placement="top"
      title="Test Label"
      transitionName="zoom-big-fast"
    >
      Test Label
    </Tooltip>
  }
  labelCol={
    Object {
      "offset": 2,
      "span": 3,
    }
  }
  validateStatus=""
  wrapperCol={
    Object {
      "span": 10,
    }
  }
>
  <TestField
    data-test-id="test"
    fieldProp1="fp1"
    form={
      Object {
        "errors": Object {},
        "touched": Object {
          "test": true,
        },
      }
    }
    frieldProp2="fp2"
    name="test"
    normalProp1="np1"
    normalProp2="np2"
  />
</FormItem>
`;

exports[`withFormItem passes props correctly to Form.Item and wrapped Input component (without error and only child) 1`] = `
<FormItem
  className="mb4-important"
  hasFeedback={false}
  labelCol={null}
  validateStatus=""
  wrapperCol={
    Object {
      "span": 24,
    }
  }
>
  <TestField
    data-test-id="test"
    fieldProp1="fp1"
    form={
      Object {
        "errors": Object {},
        "touched": Object {
          "test": true,
        },
      }
    }
    frieldProp2="fp2"
    name="test"
    normalProp1="np1"
    normalProp2="np2"
  />
</FormItem>
`;
